[gd_scene load_steps=5 format=2]

[ext_resource path="res://square.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15.4833, 35.4695 )

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 0.8, 0.8 )
collision_mask = 37
script = ExtResource( 2 )
health = 5
unstability_check = 400
timeAttack = 0.2

[node name="square" type="Sprite" parent="."]
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Arma" type="Area2D" parent="."]
position = Vector2( 25.6822, 8.58706 )
rotation = 1.5708
scale = Vector2( 1, 1.64 )
collision_layer = 2
collision_mask = 4

[node name="square2" type="Sprite" parent="Arma"]
position = Vector2( 0.000160217, -21.02 )
scale = Vector2( 0.23851, 0.851013 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Arma"]
position = Vector2( -0.45994, -25.8987 )
shape = SubResource( 2 )
disabled = true

[node name="TweenHit" type="Tween" parent="."]

[node name="TweenArma" type="Tween" parent="."]

[connection signal="body_entered" from="Arma" to="." method="_on_Arma_body_entered"]
